A bit too much going on here, had claude on one side doing to Dimension stuff and me doing the migration to introspection loading of the EK9 language definition.